Test card size change.

--- a/www/home.html
+++ b/www/home.html
@@ -246,7 +246,7 @@ user-scalable=no">
                 document.getElementById(\'preview\').src=window.location.origin+\'/live/\'+window.last_selected+'/'
                 document.getElementById(\'share_link\').setAttribute('href',window.location.origin+\'/live/\'+window.last_selected+'/')
                 document.getElementById(\'edit_link\').setAttribute('href',window.location.origin+\'/edit/\'+window.last_selected+'/' )"`+
-                'width=394 height=394 src="'+escapeHTML(algorithm.thumbnail)+'"/><br>'+
+                'src="'+escapeHTML(algorithm.thumbnail)+'"/><br>'+
                 '<h1 style="color:#afa;">'+escapeHTML(algorithm.views)+' Views</h1><br>'+
                 '<a class="navigation" href="/edit/'+path+'/">Edit</a>'+
                 '<a class="navigation" href="/live/'+path+'/">Share</a><br><br>'+
