Stream test succes; testing open graph stuff, now.

--- a/www/warning.html
+++ b/www/warning.html
@@ -79,6 +79,28 @@ user-scalable=no">
         }
     </script>
     <script class='self_rendering_code' self_deleting='true' type="text/javascript">
+        try {
+            if(url) {
+                document.head.innerHTML +=
+                `<meta name="description" content="`+server_hostname+`">
+                <!-- Facebook Meta Tags -->
+                <meta property="og:url" content="`+url+`">
+                <meta property="og:type" content="website">
+                <meta property="og:title" content="`+'CAPTCHA'+`">
+                <meta property="og:description" content="`+'Are you human?'+`">
+                <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+server_hostname+"/img/icon.png"+`">
+
+                <!-- Twitter Meta Tags -->
+                <meta name="twitter:card" content="`+server_hostname+`">
+                <meta property="twitter:domain" content="`+server_hostname+`">
+                <meta property="twitter:url" content="`+url+`">
+                <meta name="twitter:title" content="`+CAPTCHA+`">
+                <meta name="twitter:description" content="`+'Are you human?'+`">
+                <meta name="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+server_hostname+"/img/icon.png"+`">`
+            } 
+        } catch(e) {
+        }
+
         document.body.innerHTML += `<div style='display:none;' id='popovers-div'></div>`
     </script>
     <script>
