--- a/www/warning.html
+++ b/www/warning.html
@@ -81,8 +81,7 @@ user-scalable=no">
     <script class='self_rendering_code' self_deleting='true' type="text/javascript">
         try {
             if(url) {
-                document.head.innerHTML +=
-                `<meta name="description" content="`+server_hostname+`">
+                document.head.innerHTML += `<meta name="description" content="`+server_hostname+`">
                 <!-- Facebook Meta Tags -->
                 <meta property="og:url" content="`+url+`">
                 <meta property="og:type" content="website">
