--- a/www/warning.html
+++ b/www/warning.html
@@ -19,7 +19,7 @@ user-scalable=no">
         <meta name="twitter:card" content="`+server_hostname+`">
         <meta property="twitter:domain" content="`+server_hostname+`">
         <meta property="twitter:url" content="`+url+`">
-        <meta name="twitter:title" content="`+CAPTCHA+`">
+        <meta name="twitter:title" content="`+'CAPTCHA'+`">
         <meta name="twitter:description" content="`+'Are you human?'+`">
         <meta name="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+server_hostname+"/img/icon.png"+`">`
         console.log("OG", OG);
