--- a/www/home.html
+++ b/www/home.html
@@ -5,6 +5,25 @@ user-scalable=no">
 
 <head>
     <style type="text/css" src="www/css/main.css"></style>
+    <script class='self_rendering_code' self_deleting='true' type="text/javascript">
+        const OG = `<meta name="description" content="`+server_hostname+`">
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="`+url+`">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="`+'CAPTCHA'+`">
+        <meta property="og:description" content="`+'Are you human?'+`">
+        <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/splash.png"+`">
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="`+server_hostname+`">
+        <meta property="twitter:domain" content="`+host+`">
+        <meta property="twitter:url" content="`+url+`">
+        <meta name="twitter:title" content="`+'CAPTCHA'+`">
+        <meta name="twitter:description" content="`+'Are you human?'+`">
+        <meta name="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/splash.png"+`">`
+        console.log("OG", OG);
+        document.body.innerHTML += OG
+    </script>
     <script class='self_rendering_code'  type="text/javascript">
         window.counter = 0;
 
@@ -131,6 +150,7 @@ user-scalable=no">
         var category = 'featured'
         try {
             if(url) {
+                url = url.substring(url.indexOf('//')+2)
                 var first = url.indexOf('/')
                 if(first >= 0) {
                     url = url.substring(first+1)
