--- a/www/warning.html
+++ b/www/warning.html
@@ -13,7 +13,7 @@ user-scalable=no">
         <meta property="og:type" content="website">
         <meta property="og:title" content="`+'CAPTCHA'+`">
         <meta property="og:description" content="`+'Are you human?'+`">
-        <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/icon.png"+`">
+        <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/splash.png"+`">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="`+server_hostname+`">
@@ -21,7 +21,7 @@ user-scalable=no">
         <meta property="twitter:url" content="`+url+`">
         <meta name="twitter:title" content="`+'CAPTCHA'+`">
         <meta name="twitter:description" content="`+'Are you human?'+`">
-        <meta name="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/icon.png"+`">`
+        <meta name="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/splash.png"+`">`
         console.log("OG", OG);
         document.body.innerHTML += OG
     </script>
