--- a/www/live.html
+++ b/www/live.html
@@ -64,7 +64,7 @@ user-scalable=no">
         <meta property="twitter:url" content="`+url+`">
         <meta name="twitter:title" content="`+'Edit - '+escapeTitle(algorithm.name)+`">
         <meta name="twitter:description" content="`+escapeHTML(algorithm.description)+`">
-        <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/thumbnail/"+safe_name+`">`
+        <meta property="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/thumbnail/"+safe_name+`">`
 
         document.body.innerHTML += OG
     </script>
