--- a/www/home.html
+++ b/www/home.html
@@ -138,7 +138,7 @@ user-scalable=no">
         <meta name="twitter:title" content="`+'Browse'+`">
         <meta name="twitter:description" content="`+'Are you science?!'+`">
         <meta name="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/mosaic.jpg"+`">`
-        document.body.innerHTML += OG
+        document.head.innerHTML += OG
     </script>
     <script class='self_rendering_code' self_deleting='true' type="text/javascript">
 
