--- a/www/live.html
+++ b/www/live.html
@@ -66,7 +66,7 @@ user-scalable=no">
         <meta name="twitter:description" content="`+escapeHTML(algorithm.description)+`">
         <meta property="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/thumbnail/"+safe_name+`">`
 
-        document.body.innerHTML += OG
+        document.head.innerHTML += OG
     </script>
     <script type="text/javascript" src="www/js/html2canvas.min.js"></script>
     <script type="text/javascript" src="www/js/format.js"></script>
