--- a/www/home.html
+++ b/www/home.html
@@ -133,8 +133,8 @@ user-scalable=no">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="`+server_hostname+`">
-        <meta property="twitter:domain" content="`+host+`">
-        <meta property="twitter:url" content="`+url+`">
+        <meta name="twitter:domain" content="`+host+`">
+        <meta name="twitter:url" content="`+url+`">
         <meta name="twitter:title" content="`+'Browse'+`">
         <meta name="twitter:description" content="`+'Are you science?!'+`">
         <meta name="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/mosaic.jpg"+`">`
