--- a/www/live.html
+++ b/www/live.html
@@ -62,7 +62,7 @@ user-scalable=no">
         <meta property="og:description" content="`+escapeHTML(algorithm.description)+`"/>
         <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/thumbnail/"+safe_name+`"/>
         <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="`+server_hostname+`"/>
+        <meta name="twitter:card" content="summary_large_image"/>
         <meta property="twitter:domain" content="`+host+`"/>
         <meta property="twitter:url" content="`+url+`"/>
         <meta name="twitter:title" content="`+'Edit - '+escapeTitle(algorithm.name)+`"/>
