--- a/www/home.html
+++ b/www/home.html
@@ -132,7 +132,7 @@ user-scalable=no">
         <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/mosaic.jpg"+`">
 
         <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="`+server_hostname+`">
+        <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:domain" content="`+host+`">
         <meta name="twitter:url" content="`+url+`">
         <meta name="twitter:title" content="`+'Browse'+`">
