--- a/www/warning.html
+++ b/www/warning.html
@@ -16,7 +16,7 @@ user-scalable=no">
         <meta property="og:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/img/splash.png"+`">
 
         <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="`+server_hostname+`">
+        <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="`+host+`">
         <meta property="twitter:url" content="`+url+`">
         <meta name="twitter:title" content="`+'CAPTCHA'+`">
