--- a/www/live.html
+++ b/www/live.html
@@ -65,7 +65,7 @@ user-scalable=no">
         <meta name="twitter:card" content="summary_large_image"/>
         <meta property="twitter:domain" content="`+host+`"/>
         <meta property="twitter:url" content="`+url+`"/>
-        <meta name="twitter:title" content="`+'Edit - '+escapeTitle(algorithm.name)+`"/>
+        <meta name="twitter:title" content="`+escapeTitle(algorithm.name)+`"/>
         <meta name="twitter:description" content="`+escapeHTML(algorithm.description)+`"/>
         <meta property="twitter:image" content="`+'http'+(url.startsWith('https') ? 's' : '')+'://'+host+"/thumbnail/"+safe_name+`"/>`
 
